--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = mongodb+srv://gabriel:gabriell4@cluster0.qhyomzh.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URI = mongodb+srv://gabriel:gabriell4@cluster0.qhyomzh.mongodb.net/?retryWrites=true&w=majority
 PORT = 3333
