--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.2"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0"
   }
 }
