--- a/.hintrc
+++ b/.hintrc
@@ -3,12 +3,6 @@
     "development"
   ],
   "hints": {
-    "disown-opener": "off",
-    "axe/forms": [
-      "default",
-      {
-        "label": "off"
-      }
-    ]
+    "no-inline-styles": "off"
   }
 }
