--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "services",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/app.js",
+  "main": "./src/index.js",
   "type": "module",
   "scripts": {
     "start": "nodemon -w ./src"
