--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,7 +3,7 @@
     "public": true,
     "name": "myapi-node-vercel",
     "builds": [
-        { "src": "index.js", "use": "@vercel/node" }
+        { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
         { "src": "/(.*)", "dest": "/index.js" }
