--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,11 +1,9 @@
 {
     "version": 2,
-    "public": true,
-    "name": "myapi-node-vercel",
     "builds": [
-        { "src": "index.js", "use": "@vercel/node" }
+        { "src": "*.js", "use": "@vercel/node" }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "/index.js" }
+        { "src": "/(.*)", "dest": "/" }
     ]
 }
