--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-DATABASE_URI = mongodb+srv://gabriel:gabriell4@cluster0.qhyomzh.mongodb.net/?retryWrites=true&w=majority
+DATABASE_URL = mongodb+srv://gabriel:gabriell4@cluster0.qhyomzh.mongodb.net/?retryWrites=true&w=majority
