--- a/api/package.json
+++ b/api/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "./src/index.js",
   "type": "module",
+  "engine":{
+    "node":"14.x"
+  },
   "scripts": {
-    "start": "nodemon -w ./src"
+    "dev": "nodemon -w ./src",
+    "start" : "node ./src/index.js"
   },
   "keywords": [],
   "author": "",
