--- a/api/vercel.json
+++ b/api/vercel.json
@@ -4,6 +4,6 @@
         { "src": "./src/index.js", "use": "@vercel/node" }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "./src/index.js" }
+        { "src": "./src/routes/index.js", "dest": "./src/index.js" }
     ]
 }
