--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,7 +3,5 @@
     "builds": [
         { "src": "./src/index.js", "use": "@vercel/node" }
     ],
-    "routes": [
-        { "src": "./src/routes/index.js", "dest": "./src/index.js" }
-    ]
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
