--- a/api/vercel.json
+++ b/api/vercel.json
@@ -3,5 +3,7 @@
     "builds": [
         { "src": "./src/index.js", "use": "@vercel/node" }
     ],
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
+    "routes": [
+        { "src": "/(.*)", "dest": "/src/index.js" }
+    ]
 }
